--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,6 +15,11 @@ header {
 }
 
 main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
     width: 100%;
     min-height: 90vh;
     height: 90%;
@@ -119,24 +124,92 @@ h2{
 }
 
 .rifa-card{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 100%;
     background-color: white;
     border: 1px solid black;
 }
+.rifa-card p, h3{
+    color: black;
+}
 
 .divDesc{
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 50%;
+    width: 60%;
     height: 100%;
     
 }
-.rifa-card p, h3{
+.divDesc p{
+    width: 80%;
+    height: 50px;
+    position: absolute;
+    top: 65px;
+    font-size: xx-small;
+    text-wrap: wrap;
+    text-align: center;
+}
+.divDesc h3{
+    position: absolute;
+    text-align: center;
+    top: 10px;
+}
+.divDesc h4{
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    font-size: xx-large;
     color: black;
 }
+
+.divPremio{
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 40%;
+    height: 100%;
+}
+
+.divPremio h2{
+    color: black;
+}
+
+.Lista{
+    list-style-type: circle;
+}
+::marker{
+    color: black;
+}
+.Lista p{
+    text-align: wrap;
+    font-size: small;
+}
+
+.numero{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: black;
+}
+
+#printBtn{
+    width: 200px;
+    height: 50px;
+    font-size: larger;
+    margin-top: 50px;
+    color: black;
+}
+
+
 
 
 footer {
@@ -144,4 +217,39 @@ footer {
     min-height: 5vh;
     height: 5%;
     background-color: black;
+}
+
+@media print {
+    body {
+        background-color: white !important;
+        color: black !important;
+    }
+
+    header, footer, #printBtn {
+        display: none !important; /* Esconde itens desnecessários */
+    }
+
+    #Rifas-Card-View {
+        display: grid;
+        grid-template-columns: repeat(3, 300px);
+        justify-content: center;
+        align-content: flex-start;
+    }
+
+    .rifa-card {
+        page-break-inside: avoid;
+        break-inside: avoid;
+        background-color: white !important;
+        color: black !important;
+        border: 1px solid black;
+        margin: 5px;
+    }
+
+    .rifa-card *, .rifa-card p, .rifa-card h3, .rifa-card h4, .rifa-card h2 {
+        color: black !important;
+    }
+
+    main {
+        background-color: white !important;
+    }
 }
